Copyright assigned to the FSF, all notices corrected
The copyright of gnuastro has now been assigned to the FSF. Therefore
all the copyright notices in the files were changed to fit his new
condition.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
 The authors that have contributed to each package are listed after the
 name of the package:
 
+ConvertType (astconvertt): Mohammad Akhlaghi
+Convolve (astconvolve): Mohammad Akhlaghi
 ImageCrop (astimgcrop): Mohammad Akhlaghi
 MakeProfiles (astmkprof): Mohammad Akhlaghi
